# listing-expert-assessment

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bucket_aliases.py
src/: main.py
src/api/: routes.py
src/db/: init_db.py  session.py
src/models/: __init__.py  base.py  geobucket.py  geobucket_alias.py  property.py
src/schemas/: geobucket.py  property.py
src/services/: bucket_service.py  normalize.py  search_service.py
tests/: conftest.py  test_bucket_aliases.py  test_bucket_assignment.py  test_location_search.py  test_typo_tolerance.py
