[project]
name = "expertlisting-geo-bucket"
version = "0.1.0"
description = "ExpertListing Geo-Bucket Challenge backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "geoalchemy2>=0.14",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
